Sutter Health/src/objects/Managers_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Managers_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <defaultValue>$User.EmployeeAffiliate__c</defaultValue>
        <label>Affiliate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_Days__c</fullName>
        <description>Reporting Field to count the number of weekdays that a Manager Feedback has been open.</description>
        <formula>If(IsNull(Closed_Date__c),

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 ,
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( Today() - DateValue(CreatedDate) )/7)*5-1),

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 ,
CASE( MOD( (Closed_Date__c) - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( (Closed_Date__c) - DateValue(CreatedDate) )/7)*5-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Closed Date</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Manager Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConatctID__c</fullName>
        <label>ConatctID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Manager_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_to_L1__c</fullName>
        <label>Email to L1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_to_L2__c</fullName>
        <label>Email to L2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InternalURL__c</fullName>
        <label>InternalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Owner__c</fullName>
        <label>L1 Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Owner__c</fullName>
        <label>L2 Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Working_Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Owner Change Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Identified</fullName>
                </value>
                <value>
                    <fullName>Change Implemented</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Send a Thank You</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Resolution_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send Resolution Email</description>
        <label>Send Resolution Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable (Payments to Vendors)</fullName>
                </value>
                <value>
                    <fullName>Benefits &amp; Retirement</fullName>
                </value>
                <value>
                    <fullName>Capital Acquisition/Approval</fullName>
                </value>
                <value>
                    <fullName>Charge Capture</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Disability Management</fullName>
                </value>
                <value>
                    <fullName>Employee Portal</fullName>
                </value>
                <value>
                    <fullName>Hiring</fullName>
                </value>
                <value>
                    <fullName>Job Descriptions &amp; Evaluations</fullName>
                </value>
                <value>
                    <fullName>Learning (HealthStream)</fullName>
                </value>
                <value>
                    <fullName>Patient Access - Pre-service</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Performance Review (PSDP)</fullName>
                </value>
                <value>
                    <fullName>Purchasing/Ordering</fullName>
                </value>
                <value>
                    <fullName>Supplies Distribution/Delivery</fullName>
                </value>
                <value>
                    <fullName>Travel and Expense Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Tuition Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkEmail__c</fullName>
        <label>WorkEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Managers_Feedback_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Managers Feedback</label>
    <listViews>
        <fullName>Accounts_Payable_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Accounts Payable (Payments to Vendors)</value>
        </filters>
        <label>S3 Accounts Payable Feedback</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Charge_Capture_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Charge Capture</value>
        </filters>
        <label>S3 Charge Capture Feedback</label>
    </listViews>
    <listViews>
        <fullName>Comp_Benefits_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Benefits &amp; Retirement,Job Descriptions &amp; Evaluations,Tuition Reimbursement</value>
        </filters>
        <label>S3 Comp &amp; Benefits Feedback</label>
    </listViews>
    <listViews>
        <fullName>Contact_Center_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Contact Center</value>
        </filters>
        <label>S3 Contact Center Feedback</label>
    </listViews>
    <listViews>
        <fullName>Disability_Mgmt_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Disability Management</value>
        </filters>
        <label>S3 Disability Mgmt  Feedback</label>
    </listViews>
    <listViews>
        <fullName>Learning_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Learning (HealthStream)</value>
        </filters>
        <label>S3 Learning Feedback</label>
    </listViews>
    <listViews>
        <fullName>Manager_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>Manager Feedback</label>
        <queue>Manager_Feedback</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PSDP_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Performance Review (PSDP)</value>
        </filters>
        <label>S3 PSDP Feedback</label>
    </listViews>
    <listViews>
        <fullName>Patient_Access_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Patient Access - Pre-service</value>
        </filters>
        <label>S3 Patient Access Feedback</label>
    </listViews>
    <listViews>
        <fullName>Payroll_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Payroll,Travel and Expense Reimbursement</value>
        </filters>
        <label>S3 Payroll Feedback</label>
    </listViews>
    <listViews>
        <fullName>Portal_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Employee Portal</value>
        </filters>
        <label>S3 Portal Feedback</label>
    </listViews>
    <listViews>
        <fullName>Recent_Manager_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>Recently Viewed Manager Feedback</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>equals</operation>
            <value>Hiring</value>
        </filters>
        <label>S3 Recruitment Feedback</label>
    </listViews>
    <listViews>
        <fullName>Supply_Chain_Feedback</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resolution__c</columns>
        <columns>Service_Area__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Area__c</field>
            <operation>contains</operation>
            <value>Capital Acquisition/Approval,Purchasing/Ordering,Supplies Distribution/Deliver</value>
        </filters>
        <label>S3 Supply Chain Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manager Feedback</pluralLabel>
    <recordTypes>
        <fullName>ManagerFeedback</fullName>
        <active>true</active>
        <label>ManagerFeedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>ManagerFeedback_RO</fullName>
        <active>true</active>
        <description>Manager Feedback with Readonly fields</description>
        <label>ManagerFeedback RO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Status_to_New</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISPICKVAL( PRIORVALUE( Status__c ) , &apos;New&apos;) ) , ISPICKVAL( Status__c , &apos;New&apos;))</errorConditionFormula>
        <errorMessage>Status cannot be changed back to &quot;New&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Status_Validation</fullName>
        <active>true</active>
        <description>Error if Status changed by User other than Owner</description>
        <errorConditionFormula>IF(
AND
( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$User.Id  &lt;&gt; PRIORVALUE(OwnerId),
NOT(ISNEW())
), true, false
)</errorConditionFormula>
        <errorMessage>You don&apos;t have permission to edit this Manager Feedback record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Date_Not_Less_Than_Today</fullName>
        <active>true</active>
        <description>Closed Date cannot be less than Today</description>
        <errorConditionFormula>Closed_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Closed Date can not be less than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Manager_Feedback_owner_change</fullName>
        <active>true</active>
        <description>Closed_Manager_Feedback_owner_change</description>
        <errorConditionFormula>AND(ISCHANGED(OwnerId) , ISPICKVAL(Status__c, &apos;Closed&apos;) )</errorConditionFormula>
        <errorMessage>You can not change the owner for closed request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Owner_is_Not_in_Queqe</fullName>
        <active>true</active>
        <errorConditionFormula>IF 
(
AND ($Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 BEGINS(PRIORVALUE(OwnerId), &apos;00G&apos;), NOT(ISNEW())
), true, false
)</errorConditionFormula>
        <errorMessage>You cannot edit the manager feedback without assigning it to yourself from the queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_User_to_Change_Owner_To_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS($Profile.Name, &apos;S3&apos;) ,ISCHANGED(OwnerId), BEGINS(OwnerId, &apos;00G&apos;) )</errorConditionFormula>
        <errorMessage>You Cannot change the Owner to a Queue. Please select a User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResolutionNotBlankIfStatusClosed</fullName>
        <active>true</active>
        <description>Resolution cannot be left Blank If Status is Closed.</description>
        <errorConditionFormula>AND(
   ISPICKVAL(Status__c , &apos;Closed&apos;) ,
   ISPICKVAL( Resolution__c , &apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>Resolution__c</errorDisplayField>
        <errorMessage>Please select a value in Resolution.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusClosedIfResolutionisSelected</fullName>
        <active>true</active>
        <description>StatusClosedIfResolutionisSelected</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c , &apos;Closed&apos;)) ,
NOT(ISPICKVAL( Resolution__c , &apos;&apos;))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status should be Closed.</errorMessage>
    </validationRules>
</CustomObject>